--- a/package.json
+++ b/package.json
@@ -21,8 +21,17 @@
     "@angular/platform-server": "^17.3.0",
     "@angular/router": "^17.3.0",
     "@angular/ssr": "^17.3.7",
+    "@ng-bootstrap/ng-bootstrap": "^16.0.0",
+    "@popperjs/core": "^2.11.8",
+    "aos": "^2.3.4",
+    "chart.js": "^4.4.3",
+    "charts.css": "^1.1.0",
     "express": "^4.18.2",
+    "ng2-charts": "^6.0.1",
+    "ngx-toastr": "^19.0.0",
+    "ngx-webcam": "^0.4.1",
     "rxjs": "~7.8.0",
+    "toastr": "^2.1.4",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
   },
@@ -30,9 +39,12 @@
     "@angular-devkit/build-angular": "^17.3.7",
     "@angular/cli": "^17.3.7",
     "@angular/compiler-cli": "^17.3.0",
+    "@angular/localize": "^17.3.0",
+    "@types/aos": "^3.0.7",
     "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
     "@types/node": "^18.18.0",
+    "bootstrap": "^5.3.3",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
